--- a/RealTimeChatApp-Frontend/src/pages/ChatPage.css
+++ b/RealTimeChatApp-Frontend/src/pages/ChatPage.css
@@ -12,14 +12,18 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .chat-container {
   max-width: 1100px;
-  margin: 30px auto;
   overflow: hidden;
   align-content: center;
   grid-column: 1/3;
+  margin:0;
+  width: 1100px;
 }
 
 .chat-header {
@@ -69,7 +73,7 @@ body {
 .chat-messages {
   background: white;
   padding: 30px;
-  max-height: 700px;
+  max-height: 500px;
   overflow-y: scroll;
   grid-row: 1 / 2;
 }
@@ -124,149 +128,3 @@ body {
   margin-top: 20px;
 }
 
-/*:root {
-  --dark-color-a: #667aff;
-  --dark-color-b: #7386ff;
-  --light-color: #e6e9ff;
-  --success-color: #5cb85c;
-  --error-color: #d9534f;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  background: var(--light-color);
-  margin: 20px;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.btn {
-  cursor: pointer;
-  padding: 5px 15px;
-  background: var(--light-color);
-  color: var(--dark-color-a);
-  border: 0;
-  font-size: 17px;
-}
-
-/* Chat Page */
-
-/*.chat-container {
-  max-width: 1100px;
-  background: #fff;
-  margin: 30px auto;
-  overflow: hidden;
-  align-content: center;
-  grid-column: 1/3;
-}
-
-.chat-header {
-  background: var(--dark-color-a);
-  color: #fff;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  padding: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.chat-main {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: auto;
-}
-
-.chat-sidebar {
-  background: var(--dark-color-b);
-  color: #fff;
-  padding: 20px 20px 60px;
-  overflow-y: scroll;
-  grid-row: 1 / 3;
-  background: var(--dark-color-b);
-  max-height: 800px;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
-.chat-sidebar h2 {
-  font-size: 20px;
-  background: rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.chat-sidebar h3 {
-  margin-bottom: 15px;
-}
-
-.chat-sidebar ul li {
-  padding: 10px 0;
-}
-
-.chat-messages {
-  padding: 30px;
-  max-height: 700px;
-  overflow-y: scroll;
-  grid-row: 1 / 2;
-}
-
-.chat-messages .message {
-  padding: 10px;
-  margin-bottom: 15px;
-  background-color: var(--light-color);
-  border-radius: 5px;
-  overflow-wrap: break-word;
-}
-
-.chat-messages .message .meta {
-  font-size: 15px;
-  font-weight: bold;
-  color: var(--dark-color-b);
-  opacity: 0.7;
-  margin-bottom: 7px;
-}
-
-.chat-messages .message .meta span {
-  color: #777;
-}
-
-.chat-form-container {
-  padding: 10px;
-  background-color: var(--dark-color-a);
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-  max-height: 100px;
-}
-
-.chat-form-container form {
-  display: flex;
-  align-content: center;
-  max-height: 200px;
-  grid-row: 3 / 3;
-}
-
-.chat-form-container form input[type='text'] {
-  font-size: 16px;
-  padding: 5px;
-  height: 40px;
-  flex: 1;
-}
-
-.chat-form-container form .send-button {
-  margin-left: 10px;
-  height: 40px;
-}
